--- a/source/frontend/src/views/ba.header.html
+++ b/source/frontend/src/views/ba.header.html
@@ -1,5 +1,5 @@
 <header class="navbar navbar-primary navbar-top">
-  <div class="container">
+  <div class="container contentApp">
     <div class="row">
       <div class="col-md-6 col-sm-6" id="header">
         <a class="navbar-brand bac-header" href="index.html">Buenos Aires Ciudad</a>
