Nuevo source code y build 0.1.0

--- a/source/frontend/src/views/ba.header.html
+++ b/source/frontend/src/views/ba.header.html
@@ -5,7 +5,7 @@
         <a class="navbar-brand bac-header" href="index.html">Buenos Aires Ciudad</a>
       </div>
       <div class="col-md-6 col-sm-6">
-        <h5 class="sub-brand">En todo est&aacute;s vos</h5>
+        <h5 class="sub-brand">Plataforma Integral de Gestión</h5>
       </div>
     </div>
   </div>
