--- a/source/frontend/src/views/ba.header.html
+++ b/source/frontend/src/views/ba.header.html
@@ -2,7 +2,7 @@
   <div class="container contentApp">
     <div class="row">
       <div class="col-md-6 col-sm-6" id="header">
-        <a class="navbar-brand bac-header" href="index.html">Buenos Aires Ciudad</a>
+        <a class="navbar-brand bac-header" ui-sref="home">Buenos Aires Ciudad</a>
       </div>
       <div class="col-md-6 col-sm-6">
         <h5 class="sub-brand">Plataforma Integral de Gestión</h5>
